crates/test-ui/ui/msg_send_only_message.stderr
error[E0277]: the trait bound `{integer}: MessageReceiver` is not satisfied
 --> ui/msg_send_only_message.rs
  |
  |     unsafe { msg_send![1, new] };
  |              ^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `{integer}`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::RetainSemantics<{integer}, _, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<1>` to implement `objc2::__macros::MsgSend<{integer}, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
